updated to sum 3 slices that are closest to axis (instead of 1)

--- a/config.json.sample
+++ b/config.json.sample
@@ -4,6 +4,7 @@
     "bvals": "testdata/abide2_28854/dwi.bvals",
     "dwi-b": "testdata/bold5000/dwi.nii.gz",
     "bvecs-b": "testdata/bold5000/dwi.bvecs",
-    "bvals-b": "testdata/bold5000/dwi.bvals"
+    "bvals-b": "testdata/bold5000/dwi.bvals",
+    "register": false
 }
 
