flipping x for neurological data

--- a/config.json.sample
+++ b/config.json.sample
@@ -1,15 +1,6 @@
 {
-    "dwi-1": "testdata/noniso/dwi.nii.gz",
-    "bvecs-1": "testdata/noniso/dwi.bvecs",
-    "bvals-1": "testdata/noniso/dwi.bvals",
-    "dwi-2": "testdata/noflip/dwi.nii.gz",
-    "bvecs-2": "testdata/noflip/dwi.bvecs",
-    "bvals-2": "testdata/noflip/dwi.bvals",
-    "dwi-3": "testdata/zflip/dwi.nii.gz",
-    "bvecs-3": "testdata/zflip/dwi.bvecs",
-    "bvals-3": "testdata/zflip/dwi.bvals",
-    "dwi": "testdata/soichi-xf/dwi.nii.gz",
-    "bvecs": "testdata/soichi-xf/dwi.bvecs",
-    "bvals": "testdata/soichi-xf/dwi.bvals"
+    "dwi": "testdata/neurological.noflip/dwi.nii.gz",
+    "bvecs": "testdata/neurological.noflip/dwi.bvecs",
+    "bvals": "testdata/neurological.noflip/dwi.bvals"
 }
 
